syntax = "proto3";

import "google/protobuf/timestamp.proto";

package com.example.directdebit.payment;

option java_outer_classname = "PaymentDomain";


//state
message PaymentState {
  PaymentStatus status = 1;
  int32 credit_amount = 2;
  repeated Transaction transactions = 3;
}

enum PaymentStatus {
  UNKNOWN = 0;

  CREATED = 1;

  INITIALIZED = 2;

  CREDIT_STARTED = 3;
  CREDITED = 4;
  CREDIT_FAILED = 5;
}

message Transaction{
  string trans_id = 1;
}

//events
message Created {
  string payment_id = 1;
  int32 credit_amount = 2;
  repeated Transaction transactions = 3;
  google.protobuf.Timestamp event_timestamp = 1000;
}
message Initialized {
  string payment_id = 1;
  int32 scheduled_after_sec = 3;
  repeated string trans_ids = 4;
  google.protobuf.Timestamp event_timestamp = 1000;
}
message CreditStarted {
  string payment_id = 1;
  int32 credit_amount = 2;
  google.protobuf.Timestamp event_timestamp = 1000;
}
message Credited {
  string payment_id = 1;
  google.protobuf.Timestamp event_timestamp = 1000;
}
message CreditFailed {
  string payment_id = 1;
  string reason = 2;
  google.protobuf.Timestamp event_timestamp = 1000;
}

