syntax = "proto3";

package com.example.directdebit.payment;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

import "com/example/directdebit/payment/payment_domain.proto";

option java_outer_classname = "PaymentProcessor";

service PaymentProcessorAction {
  option (kalix.codegen) = {
    action: {}
  };
  rpc OnInitialized(Initialized) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "payment"
    };
  }
  rpc OnCreditStarted(CreditStarted) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "payment"
    };
  }
  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "payment"
    };
  }
}